{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 18,
  "lineage": "7bb9e935-dac0-7ea7-561b-4ab3e75fcd69",
  "resources": [
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "tf_computeinstance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20240927",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 100,
                    "type": "pd-ssd"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/gwrdiscoverysearch1/zones/us-west4-b/disks/gwrdiscoverysearch-computeinstance"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Skylake",
            "creation_timestamp": "2025-01-10T21:31:56.310-08:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/gwrdiscoverysearch1/zones/us-west4-b/instances/gwrdiscoverysearch-computeinstance",
            "instance_id": "4750581883747679396",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "n1-standard-4",
            "metadata": {
              "install-nvidia-driver": "false",
              "user-data": "#!/bin/bash\n\nsudo usermod -aG sudo guilhermeviegas1993\nsudo -u guilhermeviegas1993 -i\n\necho \"Setting parameters ------------------------------------------\"\nexport HOME=/home/guilhermeviegas1993\necho \"export rstudio_secret=passwd123gwr\" \u003e\u003e /home/guilhermeviegas1993/.bashrc \nmkdir -p ~/.ssh\necho \"-----BEGIN OPENSSH PRIVATE KEY-----\nb3BlbnNzaC1rZXktdjEAAAAABG5vbmUAAAAEbm9uZQAAAAAAAAABAAACFwAAAAdzc2gtcnNhAAAAAwEAAQAAAgEAr596nVfvtUyesl/ZYd9xMFNtRZL [...]
            },
            "metadata_fingerprint": "QhO_y_BbCeg=",
            "name": "gwrdiscoverysearch-computeinstance",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.125.85.173",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/gwrdiscoverysearch1/global/networks/gwrdiscoverysearch-vpc",
                "network_ip": "10.182.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/gwrdiscoverysearch1/regions/us-west4/subnetworks/gwrdiscoverysearch-vpc",
                "subnetwork_project": "gwrdiscoverysearch1"
              }
            ],
            "project": "gwrdiscoverysearch1",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "TERMINATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/gwrdiscoverysearch1/zones/us-west4-b/instances/gwrdiscoverysearch-computeinstance",
            "service_account": [
              {
                "email": "gwrdiscoverysearch-sa@gwrdiscoverysearch1.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "us-west4-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "metadata"
              },
              {
                "type": "index",
                "value": {
                  "value": "user-data",
                  "type": "string"
                }
              }
            ]
          ],
          "dependencies": [
            "module.compute.data.google_secret_manager_secret_version.tf_mainsecret",
            "module.compute.data.google_secret_manager_secret_version.tf_secretgitprivsshk",
            "module.compute.google_service_account.tf_computeinstance_service_account",
            "module.network.google_compute_address.tf_static_ip",
            "module.network.google_compute_network.tf_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_address",
      "name": "tf_static_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.125.85.173",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2025-01-10T21:31:03.372-08:00",
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "id": "projects/gwrdiscoverysearch1/regions/us-west4/addresses/gwrdiscoverysearch-static-ip",
            "label_fingerprint": "vezUS-42LLM=",
            "name": "gwrdiscoverysearch-static-ip",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "gwrdiscoverysearch1",
            "region": "us-west4",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gwrdiscoverysearch1/regions/us-west4/addresses/gwrdiscoverysearch-static-ip",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "users": [
              "https://www.googleapis.com/compute/v1/projects/gwrdiscoverysearch1/zones/us-west4-b/instances/gwrdiscoverysearch-computeinstance"
            ]
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "tf_fw_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-01-10T21:31:53.246-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/gwrdiscoverysearch1/global/firewalls/gwrdiscoverysearch-http",
            "log_config": [],
            "name": "gwrdiscoverysearch-http",
            "network": "https://www.googleapis.com/compute/v1/projects/gwrdiscoverysearch1/global/networks/gwrdiscoverysearch-vpc",
            "priority": 1000,
            "project": "gwrdiscoverysearch1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gwrdiscoverysearch1/global/firewalls/gwrdiscoverysearch-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.google_compute_network.tf_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "tf_fw_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "8080"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-01-10T21:31:53.246-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/gwrdiscoverysearch1/global/firewalls/gwrdiscoverysearch-https",
            "log_config": [],
            "name": "gwrdiscoverysearch-https",
            "network": "https://www.googleapis.com/compute/v1/projects/gwrdiscoverysearch1/global/networks/gwrdiscoverysearch-vpc",
            "priority": 1000,
            "project": "gwrdiscoverysearch1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gwrdiscoverysearch1/global/firewalls/gwrdiscoverysearch-https",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.google_compute_network.tf_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "tf_fw_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-01-10T21:31:53.258-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/gwrdiscoverysearch1/global/firewalls/gwrdiscoverysearch-allow-ssh",
            "log_config": [],
            "name": "gwrdiscoverysearch-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/gwrdiscoverysearch1/global/networks/gwrdiscoverysearch-vpc",
            "priority": 1000,
            "project": "gwrdiscoverysearch1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gwrdiscoverysearch1/global/firewalls/gwrdiscoverysearch-allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.google_compute_network.tf_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "tf_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/gwrdiscoverysearch1/global/networks/gwrdiscoverysearch-vpc",
            "mtu": 0,
            "name": "gwrdiscoverysearch-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "network_id": "2114716787259981051",
            "numeric_id": "2114716787259981051",
            "project": "gwrdiscoverysearch1",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gwrdiscoverysearch1/global/networks/gwrdiscoverysearch-vpc"
          }
        }
      ]
    }
  ]
}